--- a/LearnServant.cabal
+++ b/LearnServant.cabal
@@ -16,7 +16,24 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Lib
+                     , Server
   build-depends:       base >= 4.7 && < 5
+                     , aeson
+                     , mtl
+                     , transformers
+                     , attoparsec
+                     , bytestring
+                     , time
+                     , either
+                     , string-conversions
+                     , http-media
+                     , wai
+                     , warp
+                     , directory
+                     , blaze-markup
+                     , blaze-html
+                     , lucid
+                     , servant-server
   default-language:    Haskell2010
 
 executable LearnServant-exe
@@ -25,6 +42,7 @@ executable LearnServant-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , LearnServant
+                     , warp
   default-language:    Haskell2010
 
 test-suite LearnServant-test
